// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`For functions emits declaration map: dts 1`] = `
"declare module \\"rollup-plugin-flat-dts\\" {
    export function testFunction(prefix: string, ...args: string[]): string;
}
//# sourceMappingURL=index.d.ts.map
"
`;

exports[`For functions emits declaration map: source map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"src/tests/functions/functions.ts\\"],\\"names\\":[],\\"mappings\\":\\";IAAA,MAAM,UAAU,YAAY,CAAC,MAAM,EAAE,MAAM,EAAE,GAAG,IAAI,EAAE,MAAM,EAAE,GAAG,MAAM,CAEtE\\",\\"file\\":\\"index.d.ts\\",\\"sourceRoot\\":\\"\\"}"`;

exports[`For functions emits type definitions 1`] = `
"declare module \\"rollup-plugin-flat-dts\\" {
    export function testFunction(prefix: string, ...args: string[]): string;
}
"
`;
